# Sphero-ROS

./: README.md
gazebo_contact_sensor_plugin/: CMakeLists.txt
gazebo_contact_sensor_plugin/include/: ContactPlugin.h
gazebo_contact_sensor_plugin/src/: ContactPlugin.cpp
ipython/: default.ipynb
sphero_description/: CMakeLists.txt  package.xml
sphero_description/meshes/: Sphero_Textured.dae
sphero_description/robots/: sphero.gazebo.xacro  sphero.urdf
sphero_gazebo/: CMakeLists.txt  package.xml
sphero_gazebo/include/sphero_gazebo/: gazebo_sphero_controller.h
sphero_gazebo/launch/: keyboard_teleop.launch  main.launch  sphero.launch.xml
sphero_gazebo/models/desert/: model.config  model.sdf
sphero_gazebo/models/desert/meshes/: Mountains.dae  model.dae
sphero_gazebo/src/: gazebo_sphero_controller.cpp
sphero_gazebo/worlds/: desert.world  sphero_empty.world
sphero_node/: CMakeLists.txt  package.xml
sphero_node/msg/: SpheroCollision.msg
sphero_project/: README.md
sphero_project/my_sph_actions/: CMakeLists.txt  package.xml  setup.py
sphero_project/my_sph_actions/action/: sphero_action_msg.action
sphero_project/my_sph_actions/src/act_dir/: action_server.py  odometry_analysis.py
sphero_project/my_sph_main/: CMakeLists.txt  package.xml
sphero_project/my_sph_main/launch/: my_launch.launch
sphero_project/my_sph_main/src/: main.py  pid_control.py  sphero_control.py  sphero_control_v2.py
sphero_project/my_sph_services/: CMakeLists.txt  package.xml  setup.py
sphero_project/my_sph_services/src/srv_dir/: publisher.py  service_server.py  subscriber_imu.py  subscriber_odom.py
