<package>
  <name>sphero_description</name>
  <version>0.0.1</version>
  <description>
    URDF for Sphero.
  </description>
  <author>Ricardo Tellez</author>
  <maintainer email="rtellez@theconstructsim.com">Ricardo Tellez</maintainer>
  <license>TBD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
